Fixes the wrapping of the blocks on the main page

--- a/style.css
+++ b/style.css
@@ -100,7 +100,8 @@ img {
 	font-size: x-large;
 	text-decoration: none;
 	text-align: center;
-	display: block;
+	display: inline-block;
+   width: 80%;
 	padding: 1em;
 	margin: 1em;
 	border-radius: .5em;
